k8s/base/otel-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-front
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: otel-front
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
